added Philadelphia to table

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
    <body>
        <h3>NBA Atlantic Conference Standing</h3>    
        
+       <table>
        <tr>
-            <td>TEAM</td>
-            <td>WIN</td>
-            <td>LOSS</td>
+            <th>TEAM</th>
+            <th>WIN</th>
+            <th>LOSS</th>
         </tr>
     
         <tr>
@@ -33,6 +34,13 @@
             <td>35</td>
             <td>13</td>
         </tr>
+
+        <tr>
+            <td><a href="./assets/philadelphia/philadelphia.html">Philadelphia Sixers</a></td>
+            <td>30</td>
+            <td>17</td>
+        </tr>
+        </table>
 
     </body>
 </html>
