--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
             <td>30</td>
             <td>17</td>
         </tr>
+
+        <tr>
+            <td><a href="./assets/boston/boston.html">Boston Celtics</a></td>
+            <td>28</td>
+            <td>18</td>
+        </tr>
+
         </table>
 
     </body>
