added Brooklyn Nets

--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
             <td>18</td>
         </tr>
 
+        <tr>
+            <td><a href="./assets/brooklyn/brooklyn.html">Brooklyn Nets</a></td>
+            <td>24</td>
+            <td>23</td>
+        </tr>
+
         </table>
 
     </body>
