added Knicks to table

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             <td>23</td>
         </tr>
 
+        <tr>
+            <td><a href="./assets/new_york/new_york.html">New York Knicks</a></td>
+            <td>10</td>
+            <td>34</td>
+        </tr>
+
         </table>
 
     </body>
